# ReversiQt

./: CMakeLists.txt  License.txt  QtReversi_en_CA.ts  QtReversi_fr_CA.ts  README.md  case.cpp  case.h  main.cpp  playertile.cpp  playertile.h  resources.qrc  reversi.cpp  reversi.h  reversiview.cpp  reversiview.h
